--- a/src/main/resources/com/osstudents/fcse/aiu/project/test.fxml
+++ b/src/main/resources/com/osstudents/fcse/aiu/project/test.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -16,15 +14,15 @@
     <top>
         <MenuBar>
             <Menu text="File">
-                <MenuItem text="Open" onAction="#chooseFile"/>
-                <MenuItem text="Save" onAction="#saveFile"/>
+                <MenuItem onAction="#chooseFile" text="Open" />
+                <MenuItem text="Save" />
                 <MenuItem text="Close" />
             </Menu>
         </MenuBar>
     </top>
     <center>
         <AnchorPane>
-            <TextArea fx:id="MainArea" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+            <TextArea fx:id="MainArea" onKeyPressed="#onTextEdit" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
         </AnchorPane>
     </center>
     <bottom>
@@ -34,11 +32,8 @@
             </padding>
             <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
                 <Label fx:id="statusMessage" prefWidth="150.0" text="Checking for Changes..." />
-                <ProgressBar fx:id="progressBar" prefWidth="150.0" progress="0.0" />
             </HBox>
-            <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
-                <Button fx:id="loadChangesButton" mnemonicParsing="false" text="Load Changes" />
-            </HBox>
+            <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS" />
         </HBox>
     </bottom>
 </BorderPane>
