--- a/src/main/resources/com/osstudents/fcse/aiu/project/Editor.fxml
+++ b/src/main/resources/com/osstudents/fcse/aiu/project/Editor.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.osstudents.fcse.aiu.project.testController">
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.osstudents.fcse.aiu.project.EditorController">
     <top>
         <MenuBar>
             <Menu text="File">
